[package]
name = "strike-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = "0.7.5"
reqwest = { version = "0.12.5", default-features = false, features =  ["json",
    "rustls-tls",
    "rustls-tls-native-roots",
    "socks"]}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", default-features = false }
log = "0.4"
rand = "0.8.5"

[dev-dependencies]
tokio = { version = "1", features =["rt-multi-thread", "macros", "sync", "time"] }
uuid = { version = "1", features = ["v4"] }
dotenvy = "0.15"

[[example]]
name = "create_invoice"
