[package]
name = "strike-rs"
version = "0.3.0"
edition = "2021"
license = "MIT"
authors = ["thesimplekid <tsk@thesimplekid.com>"]
description = "Strike API SDK"
homepage = "https://github.com/thesimplekid/strike-rs"
repository = "https://github.com/thesimplekid/strike-rs"
rust-version = "1.63.0" # MSRV

[dependencies]
anyhow = "1"
axum = "0.6.20"
reqwest = { version = "0.12", default-features = false, features =  ["json",
    "rustls-tls",
    "rustls-tls-native-roots",
    "socks"]}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", default-features = false }
log = "0.4"
rand = "0.8.5"
ring = "0.17.8"
async-trait = "0.1"
hyper = "0.14"
http-body-util = "0.1.0"
tower = "0.4"
tower-http = { version = "0.4.0", features = ["map-request-body", "util"] }
thiserror = "1"

[dev-dependencies]
tokio = { version = "1", features =["rt-multi-thread", "macros", "sync", "time"] }
uuid = { version = "1", features = ["v4"] }
dotenvy = "0.15"

[[example]]
name = "create_invoice"
